Sat Feb 21 16:18:42 2015  Stefan Schuler  <mail@stefanschuessler.de>

	* compar.c (Init_Comparable): [DOC] Replace camelcase variable name.
	  [Fix GH-833]

Fri Feb 20 17:27:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_identical_p): fix handle leak, ensure to close
	  the handle of the first argument.

Fri Feb 20 17:19:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (different_device_p): compare by volume serial
	  numbers, not by path names.  [ruby-core:68162] [Bug #10865]

Thu Feb 19 01:58:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_file_expand_path_internal): neither the drive
	  of base directory nor the current drive are involved in the
	  result if different than the drive of path.
	  [ruby-core:68130] [Bug #10858]

Wed Feb 18 10:48:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (wrename): return EXDEV if moving a directory to
	  another drive, since MoveFileExW does not set proper error code.
	  [ruby-core:68162] [Bug #10865]

Wed Feb 18 03:13:52 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump psych version.
	* ext/psych/psych.gemspec: ditto
	* ext/psych/yaml/scanner.c: add latest libyaml change.
	* test/psych/helper.rb: support newer minitest
	* test/psych/test_to_yaml_properties.rb: ditto

Tue Feb 17 11:47:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::DNS::Resource#==, #hash): elements
	  returned by Kernel#instance_variables are Symbols now.
	  [ruby-core:68128] [Bug #10857]

Tue Feb 17 10:59:10 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/syntax/calling_methods.rdoc: Fix documentation for "calling_methods"
	  Patch by @sos4nt [fix GH-830][ci skip]

Tue Feb 17 10:53:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_file_expand_path_internal): do not make invalid
	  (or ADS) path if the path has a drive letter, the result also