@@ -1,3 +1,8 @@
+Sat Feb 21 19:51:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* re.c (match_aref): RMatch::regexp is Qnil after matching by a
+	  string since r45451.  [ruby-core:68209] [Bug #10877]
+
 Sat Feb 21 16:18:42 2015  Stefan Schuler  <mail@stefanschuessler.de>
 
 	* compar.c (Init_Comparable): [DOC] Replace camelcase variable name.
